<resources>
    <string name="app_name">WeChatPay</string>
    <string name="et_product_name">商品名称</string>
    <string name="et_product_price">商品价格</string>
    <string name="et_product_id">商品号</string>
    <string name="et_product_count">商品数量</string>
    <string name="bt_create_list">生成订单</string>
    <string name="bt_onkey_pay">一键支付</string>
    <string name="tv_prepay_list">预支付订单信息</string>
    <string name="bt_pay">确认支付</string>
    <string name="pay_result_tip">支付结果</string>
    <string name="app_tip">结果</string>
    <string name="pay_result_callback_msg">返回码:</string>

    <string name="save_picture">保存图片</string>
    <string name="save_picture_failed">保存失败</string>
    <string name="save_picture_success">图片成功保存至%s目录</string>

    <string name="action_settings">Settings</string>
    <string name="about">关于舌诊</string>

</resources>
